[package]
name = "signed_cookies"
version = "0.1.2"
authors = ["siteshpattanaik"]
edition = "2018"
description = "Signed Cookies"
license = "MIT"
readme = "README.md"
include = ["src/**/*", "Cargo.toml"]

[dependencies]
time = "~0.1.39"
hyper = "~0.11.18"
hmac-sha1 = "~0.1.3"
lazy_static = "1"

[dependencies.failure]
version = "0.1.1"
